# MoonRock

./: .gitignore  LICENSE  README.md  meson.build
include/: crystal.h  crystal_anim.h  crystal_api.h  crystal_color.h  crystal_display.h  crystal_mission_control.h  crystal_plugin.h  crystal_robust.h  crystal_shaders.h  crystal_touch.h  ewmh.h  moonrock.h  moonrock_anim.h  moonrock_api.h  moonrock_color.h  moonrock_display.h  moonrock_mission_control.h  moonrock_plugin.h  moonrock_robust.h  moonrock_touch.h  wm_compat.h
shaders/: basic.frag  basic.vert  blur.frag  desaturate.frag  shadow.frag  tint.frag
shell-api/: moonrock_scale.c  moonrock_scale.h
src/: crystal.c  crystal_anim.c  crystal_api.c  crystal_color.c  crystal_display.c  crystal_mission_control.c  crystal_plugin.c  crystal_robust.c  crystal_shaders.c  crystal_touch.c  moonrock.c  moonrock.h  moonrock_anim.c  moonrock_anim.h  moonrock_api.c  moonrock_color.c  moonrock_color.h  moonrock_display.c  moonrock_display.h  moonrock_mission_control.c  moonrock_mission_control.h  moonrock_plugin.c  moonrock_plugin.h  moonrock_robust.c  moonrock_robust.h  moonrock_shaders.c  moonrock_shaders.h  moonrock_touch.c  moonrock_touch.h  wm_compat.c  wm_compat.h
themes/: snow-leopard.theme
tutorial/: index.html
tutorial/chapters/: 01-what-is-c.html  02-hello-world.html  03-variables.html  04-functions.html  05-control-flow.html  06-structs.html  07-pointers.html  08-arrays-memory.html  09-headers.html  10-libraries.html  11-build-systems.html  12-algorithms.html  13-debugging.html  14-advanced.html  15-next-steps.html
tutorial/css/: style.css
